# dmlsrim

./: .coveragerc  .gitignore  Notes.md  Pipfile  README.rst  dev.py  dev_tools.py  graph.json  graph.txt  mypy.ini  output.txt  pyproject.toml  pytest.ini  setup.cfg
data/Ni_2um_He@100keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@150keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@200keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@250keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@300keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@400keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@500keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_He@600keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/Ni_2um_Ni@3000keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@100keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@150keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@200keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@250keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@300keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@400keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@500keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@600keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_1um_He@700keV/: E2RECOIL.txt  LATERAL.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@100keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@150keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@200keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@250keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@300keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@400keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@500keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@600keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_2um_He@700keV/: IONIZ.txt  PHONON.txt  TRIM.IN
data/ceria_5um_He@100keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_5um_He@150keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_5um_He@200keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_5um_He@250keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
data/ceria_5um_He@300keV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  (+3 more)
src/: Srim_analysis.ipynb  ceria.py  cli.py  dcf.py  dcf_mung.py  dcfclass.py  main copy.py  main.py  mung.py  parser.py  reg.py  save_load.py  try.py  urania.py
tests/: test_main.py
(+77 files in other folders)
