[tool.poetry]
name = "dmlsrim"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]
repository = "https://github.com/Yobmod/dmlsrim"
# venv = r"C:\Users\Customer\AppData\Local\pypoetry\Cache\virtualenvs\dmlsrim-7DeZLsbd-py3.7\Scripts\python.exe"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "*"  # brings numpy
typing-extensions = "*"
numpy = "git = 'https://github.com/numpy/numpy.git'"
#[
    #{version='==1.19.3', markers="sys_platform=='win64'"},
    #{git = 'https://github.com/numpy/numpy.git', markers="sys_platform=='linux'"},
#]
pysrim = "*"
pydantic = "*"
# data-science-types = "*"
# numpy-stubs = "*"
# pillow = "*"

# pysimplegui = "*"
# pytoml = "*"
python-dotenv = "*"
# boltons = "*"
# keras = "*"
# sklearn = "*"
colorama = "*"
termcolor = "*"
# chempy = "*"
# pyyaml = "*"
# returns = "*"
typer = {extras = ["all"], version = "*"}
dacite = "*"
# dill = "*"
# toml = "*"

pandas = "*"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
jupyter_nbextensions_configurator = "*"
# imageio = "*"  # brings pillow
# opencv-python = "*"
# imutils = "*"
scipy = "*"
statsmodels = "*"
ipykernel = "^5.2.0"
jupyterlab = "^2.0.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "*"
cython = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-srcpaths = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
flake8-simplify = "*"
flake8-2020 = "*"
flake8-annotations-complexity = "*"
# flake8-cognitive-complexity = "^0.1.0"
# cohesion = "*"  # flake8
# pdbpp = "*"
# pyinstaller = "*"
# safety = "*"
# black = "^19.10b0"
gitpython = "*"
# rich = "*"


[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

# [tool.pytest.ini_options]

# testpaths = [    
#     "tests",
#     "integration",
#     ]

# srcpaths = [".", "src", "lib"]